# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "shusky.dt",
    srcs = glob([
        "google/*.dtsi",
        "google/*.dts",
        "google/google-dts-zuma/*.dts",
        "google/google-dts-zuma/*.dtsi",
        "google/google-dts-zuma/google-dts-ripcurrent/*.dts",
        "google/google-dts-zuma/google-dts-ripcurrent/*.dtsi",
    ]) + [
        "Makefile",
        "google/Makefile",
        "google/google-dts-zuma/Makefile",
        "google/google-dts-zuma/google-dts-ripcurrent/Makefile",
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    visibility = [
        "//private/devices/google/shusky:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
